--- a/src/components/user/register/template.html
+++ b/src/components/user/register/template.html
@@ -40,7 +40,7 @@
             <div class="row demo" v-if="user._id">
                 <div class="col s4">
                     <md-checkbox :value.sync="editPassword">
-                        Editar contraseña
+                        Изменить пароль
                     </md-checkbox>
                 </div>
             </div>
