--- a/src/components/game/template.html
+++ b/src/components/game/template.html
@@ -26,7 +26,7 @@
             <md-input name="text" :value.sync="chattext" class="col s9 m9 l10">
                 {{ $t("game.text") }}
             </md-input>
-            <md-btn @mouseover="tooltip($event, 'Enviar Mensaje', 'top')"
+            <md-btn @mouseover="tooltip($event, 'Отправить', 'top')"
                     class="btn waves-effect waves-light col s3 m3 l2 send-btn" type="submit">
                 S
             </md-btn>
