--- a/src/components/user/account/template.html
+++ b/src/components/user/account/template.html
@@ -34,7 +34,7 @@
                         <md-icon slot="secondary-content">send</md-icon>
                     </md-collection-item>
                     <md-collection-item>
-                        Configuraciones
+                        Настройки
                         <md-icon slot="secondary-content">send</md-icon>
                     </md-collection-item>
                 </md-collection>
