--- a/src/components/user/register/template.html
+++ b/src/components/user/register/template.html
@@ -1,16 +1,15 @@
-<div class="row">
-    <h3 class="flat-text-header" style="text-align: center;" v-if="!user._id">{{ $t("register.title") }}</h3>
+<div class="row container">
+    <h4 class="flat-text-header" style="text-align: center;" v-if="!user._id">{{ $t("register.title") }}</h4>
     <div style="text-align: center;"><p>{{error| json}}</p></div>
     <form class="col s12" v-on:submit.prevent="registerUser()">
         <div class="row card-panel">
             <div class="row demo">
                 <md-input
-                        name="usuario"
                         :value.sync="user.username"
                         class="col s12 m6 l6"
                         :success-msg="formValidMsg.user.success"
                         :error-msg="formValidMsg.user.error"
-                        :valid="validUser()"
+                        :valid="validUser"
                 >
                     {{ $t("register.username") }}
                 </md-input>
@@ -20,18 +19,7 @@
                     {{ $t("register.email") }}
                 </md-input>
             </div>
-            <div class="row demo">
-                <md-input name="last_name"
-                          :value.sync="user.firstName"
-                          class="col s12 m4 l4">
-                    {{ $t("register.firstName") }}
-                </md-input>
-                <md-input name="last_name"
-                          :value.sync="user.lastName"
-                          class="col s12 m4 l4">
-                    {{ $t("register.lastName") }}
-                </md-input>
-            </div>
+
             <div class="row demo" v-if="user._id">
                 <div class="col s4">
                     <md-checkbox :value.sync="editPassword">
@@ -42,39 +30,23 @@
             <div class="row demo" v-if="editPassword">
                 <md-input type="password" class="col s12 m6 l6" :value.sync="user.password"
                           :success-msg="formValidMsg.password.success" :error-msg="formValidMsg.password.error"
-                          :valid="validPassword()">
+                          :valid="validPassword">
                     {{ $t("register.password") }}
                 </md-input>
                 <md-input type="password" class="col s12 m6 l6" :value.sync="user.passwordRepit"
                           :success-msg="formValidMsg.passwordRepit.success"
-                          :error-msg="formValidMsg.passwordRepit.error" :valid="repitPasswordValidate()">
+                          :error-msg="formValidMsg.passwordRepit.error" :valid="repitPasswordValidate">
                     {{ $t("register.passwordRepit") }}
                 </md-input>
             </div>
-            <div class="row">
-                <p class="flat-text-header">Пол</p>
-                <md-radio-group group="firstNameValid" class="col s6 m6 l6">
-                    <md-radio :value.sync="user.sexo" radio-value="f" class="with-gap">
-                        {{ $t("register.femen") }}
-                    </md-radio>
-                    <md-radio :value.sync="user.sexo" radio-value="m" class="with-gap">
-                        {{ $t("register.mascul") }}
-                    </md-radio>
-                </md-radio-group>
-                <md-input :value.sync="user.age" type="number" :number="true" class="col s6 m6 l6"
-                          :error-msg="'error'" :valid="user.age < 100 && user.age > 3"
-                >
-                    {{ $t("register.age") }}
-                </md-input>
-            </div>
+
         </div>
 
         <md-button class="waves-effect waves-light col s6 m6 l6" @click="registerUser()">
-            <md-icon left>cloud</md-icon>
+            <md-icon left>check</md-icon>
             {{ [user._id?'Editar':$t("register.insert")] }}
         </md-button>
-        <md-button class="waves-effect waves-light col s6 m6 l6" v-link="{name: user._id?'user':'home'}">
-            <md-icon right>cloud</md-icon>
+        <md-button class="waves-effect waves-light col s6 m6 l6 cancel" v-link="{name: user._id?'user':'home'}">
             {{ $t("register.cancel") }}
         </md-button>
     </form>
@@ -84,7 +56,9 @@
             left: 10px;
             width: 100%;
         }
-
+        .cancel{
+          background: #666
+        }
         input:not([type]) + label:after, input[type=text] + label:after, input[type=password] + label:after, input[type=email] + label:after, input[type=url] + label:after, input[type=time] + label:after, input[type=date] + label:after, input[type=datetime-local] + label:after, input[type=tel] + label:after, input[type=number] + label:after, input[type=search] + label:after, textarea.materialize-textarea + label:after {
             display: block;
             content: "";
