--- a/src/components/game/template.html
+++ b/src/components/game/template.html
@@ -17,6 +17,40 @@
 
     </md-modal>
 
+
+    <div class="col s12 m12 l3">
+        <user-card :color="'white'" :username="userWhite" v-if="this.orientation === 'black'"></user-card>
+        <user-card :color="'black'" :username="userBlack" v-else></user-card>
+        <h6 class="flat-text-header hello" style="text-align: center">{{ state }}</h6>
+        <div class="col s12 m12 l12">
+            <board-history :history="history" :active="active" :humanvspc="isHumanVsPC"></board-history>
+        </div>
+        <div class="col s12 m12 l12">
+            <md-btn @mouseover="tooltip($event, 'Фигуры', 'top')" class="waves-effect waves-light col s2 m2 l2"
+                    @click="changeStyle('pieces')">
+                P
+            </md-btn>
+            <md-btn @mouseover="tooltip($event, 'Доска', 'top')" class="waves-effect waves-light col s2 m2 l2"
+                    @click="changeStyle('board')">
+                B
+            </md-btn>
+            <md-btn class="waves-effect waves-light col s4 m4 l4"
+                    @click="rendir()">
+                {{ $t("game.rend") }}
+            </md-btn>
+            <md-btn 
+                    class="waves-effect waves-light col s4 m4 l4" @click="changeOrientation">
+                {{ $t("game.invert") }}
+            </md-btn>
+        </div>
+        <user-card :color="'black'" :username="userBlack" v-if="this.orientation !== 'white'"></user-card>
+        <user-card :color="'white'" :username="userWhite" v-else></user-card>
+    </div>
+
+    <div class="col s12 m12 l6">
+        <div id='tablerochess' style="width: 100%;height: 600px;"
+             class="{{ stylesBoard['board'][styles['board']] }} chessground vuejs {{ stylesBoard['pieces'][styles['pieces']] }}"></div>
+    </div>
     <div class="col s12 m12 l3">
         <p style="text-align: center">{{ $t("game.chat") }}</p>
         <div style="height: 65vh;overflow: auto" id="chatConvertGame">
@@ -48,38 +82,7 @@
         </form>
 
     </div>
-    <div class="col s12 m12 l6">
-        <div id='tablerochess' style="width: 100%;height: 600px;"
-             class="{{ stylesBoard['board'][styles['board']] }} chessground vuejs {{ stylesBoard['pieces'][styles['pieces']] }}"></div>
-    </div>
-    <div class="col s12 m12 l3">
-        <user-card :color="'white'" :username="userWhite" v-if="this.orientation === 'black'"></user-card>
-        <user-card :color="'black'" :username="userBlack" v-else></user-card>
-        <h6 class="flat-text-header hello" style="text-align: center">{{ state }}</h6>
-        <div class="col s12 m12 l12">
-            <board-history :history="history" :active="active" :humanvspc="isHumanVsPC"></board-history>
-        </div>
-        <div class="col s12 m12 l12">
-            <md-btn @mouseover="tooltip($event, 'Фигуры', 'top')" class="waves-effect waves-light col s2 m2 l2"
-                    @click="changeStyle('pieces')">
-                P
-            </md-btn>
-            <md-btn @mouseover="tooltip($event, 'Доска', 'top')" class="waves-effect waves-light col s2 m2 l2"
-                    @click="changeStyle('board')">
-                B
-            </md-btn>
-            <md-btn @mouseover="tooltip($event, 'Сдаться', 'top')" class="waves-effect waves-light col s4 m4 l4"
-                    @click="rendir()">
-                {{ $t("game.rend") }}
-            </md-btn>
-            <md-btn @mouseover="tooltip($event, 'Перевернуть', 'top')"
-                    class="waves-effect waves-light col s4 m4 l4" @click="changeOrientation">
-                {{ $t("game.invert") }}
-            </md-btn>
-        </div>
-        <user-card :color="'black'" :username="userBlack" v-if="this.orientation !== 'white'"></user-card>
-        <user-card :color="'white'" :username="userWhite" v-else></user-card>
-    </div>
+
     <!-- Add "scoped" attribute to limit CSS to this component only -->
     <style scoped>
 
