--- a/src/components/puzzles/template.html
+++ b/src/components/puzzles/template.html
@@ -5,8 +5,7 @@
                     v-for="puzzleT in puzzlesType"
                     @click="selectPuzzleType(puzzleT)"
                     :active="puzzleT.type == puzzleType.type">
-                {{ puzzleT.type }}
-                <md-badge>{{ counts[puzzleT.type] }}</md-badge>
+                {{ $t('puzzles.types.' + puzzleT.type + '.name') }}
             </md-collection-item>
         </md-collection>
         <md-card class="blue-grey darken-1" content-class="white-text">
@@ -42,7 +41,7 @@
             <md-collection v-show="puzzles.length > 0" id="listSomePuzzles" style="max-height: 80vh;overflow: auto">
                 <md-collection-item v-for="puzzle in puzzles" :active="item._id == puzzle._id"
                                     @click="selectItm(puzzle)">
-                    Puzzle {{ $index + 1 }}
+                    Головоломка {{ $index + 1 }}
                     <md-badge>{{puzzle.results}}</md-badge>
                 </md-collection-item>
             </md-collection>
@@ -79,10 +78,9 @@
 </md-button>
 <md-button class="waves-effect waves-green btn-flat"
            @click="createPuzzle(false)">
-{{ $t("puzzles.create.cancel") }}     
+{{ $t("puzzles.create.cancel") }}
 </md-button>
 </span>
     </md-modal>
 
 </div>
-
